<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.co.punters-den</groupId>
    <artifactId>web</artifactId>
    <version>0.1.0</version>
    <name>punter's den web module</name>
    <packaging>war</packaging>
    <url>http://puntersden.co.uk</url>
    <dependencies>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure-contrib</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-servlet</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-json</artifactId>
            <version>0.1.2</version>
        </dependency>
        <dependency>
            <groupId>compojure</groupId>
            <artifactId>compojure</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.lpetit.ring</groupId>
            <artifactId>ring-java-servlet</artifactId>
            <version>0.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>tools.logging</artifactId>
            <version>0.2.4</version>
        </dependency>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>java.jdbc</artifactId>
            <version>0.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>3.1.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>reply</groupId>
            <artifactId>reply</artifactId>
            <version>0.1.0-beta9</version>
        </dependency>
        <dependency>
            <groupId>com.cemerick</groupId>
            <artifactId>pomegranate</artifactId>
            <version>0.0.13</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>midje</groupId>
            <artifactId>midje</artifactId>
            <version>1.5.0-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ring-mock</groupId>
            <artifactId>ring-mock</artifactId>
            <version>0.1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ring-reload-modified</groupId>
            <artifactId>ring-reload-modified</artifactId>
            <version>0.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-devel</artifactId>
            <version>1.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-jetty-adapter</artifactId>
            <version>1.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>robert</groupId>
            <artifactId>hooke</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>lein-reload</groupId>
            <artifactId>lein-reload</artifactId>
            <version>1.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.flyway</groupId>
            <artifactId>flyway-core</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.24</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>c3p0</groupId>
            <artifactId>c3p0</artifactId>
            <version>0.9.1.2</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>clojars.org</id>
            <url>http://clojars.org/repo</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>sonatype-oss-public</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <finalName>punters-den</finalName>
        <plugins>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.0.3.v20130506</version>
                <configuration>
                    <scanIntervalSeconds>10</scanIntervalSeconds>
                    <war>${project.build.outputDirectory}/../${project.build.finalName}</war>
                    <httpConnector>
                        <port>5000</port>
                    </httpConnector>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.theoryinpractise</groupId>
                <artifactId>clojure-maven-plugin</artifactId>
                <version>1.3.15</version>
                <configuration>
                    <sourceDirectories>
                        <sourceDirectory>src/main/clojure</sourceDirectory>
                    </sourceDirectories>
                    <warnOnReflection>true</warnOnReflection>
                    <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
                    <namespaces>
                        <namespace>!simple.war</namespace>
                    </namespaces>
                    <replScript>start-jetty-server.clj</replScript>
                    <clojureOptions>-DCLEARDB_DATABASE_URL=mysql://punter_test:Janeka1974@localhost/pd_test
                    </clojureOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <environmentVariables>
                        <CLEARDB_DATABASE_URL>mysql://punter_test:Janeka1974@localhost/pd_test</CLEARDB_DATABASE_URL>
                    </environmentVariables>
                    <forkCount>3</forkCount>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <!--<properties>-->
                    <!--<property>-->
                    <!--<name>listener</name>-->
                    <!--<value>punters_den.util.TestFixture</value>-->
                    <!--</property>-->
                    <!--</properties>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.jelastic</groupId>
                <artifactId>jelastic-maven-plugin</artifactId>
                <version>1.7-SNAPSHOT</version>
                <configuration>
                    <email>ondrej.linek@gmail.com</email>
                    <password>janeka</password>
                    <context>ROOT</context>
                    <environment>pd-test</environment>
                    <api_hoster>app.j.layershift.co.uk</api_hoster>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
